syntax = "proto3";

package users;

service UsersService {
  rpc RegisterUserProfile(RegisterUserProfileRequest) returns (RegisterUserProfileResponse);
}

message RegisterUserProfileRequest {
  string userId = 1;
}

message RegisterUserProfileResponse {
  int32 statusCode = 1;
}

// Keeping these for future use when implementing profile updates
enum UserRole {
  UNKNOWN = 0;
  ADMIN = 1;
  USER = 2;
}

enum AccountStatus {
  ACTIVE = 0;
  INACTIVE = 1;
}

message UserProfile {
  string user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
  optional string phone = 5;
  repeated UserRole roles = 6;
  optional string profile_picture = 7;
  AccountStatus status = 8;
  int64 created_at = 9; // Using int64 for timestamp to avoid google.protobuf.Timestamp dependency
  int64 updated_at = 10;
  optional int64 deleted_at = 11;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}